# fastLink

./: .gitignore  Cargo.toml  README.md
.github/workflows/: windows-release.yml
desks-cli/: Cargo.toml  README.md
desks-cli/src/: desku.rs  main.rs
desks-cli/src/handler/: init.rs  mod.rs  original.rs  reset.rs  set.rs  state.rs  usual.rs
desks-cli/src/types/: mod.rs  state.rs
desks-cli/src/types/full/: args.rs  commands.rs
desks-cli/src/types/only_usual/: args.rs
desks-cli/src/utils/: func.rs  rollback.rs
desks-core/: Cargo.toml  README.md
desks-core/src/: lib.rs  state.rs
desks-core/src/handler/: fresh.rs  init.rs  original.rs  reset.rs  set.rs  state.rs  usual.rs
desks-core/src/utils/: func.rs  rollback.rs
desks-tray/: Cargo.toml  README.md  build.rs
desks-tray/assets/: resources.rc
desks-tray/src/: main.rs  msgbox.rs  tray.rs
desks-tray/src/tray/: icon.rs  info.rs  mod.rs  setup.rs
desks-tray/src/tray/handler/: keep_layout.rs  mod.rs
desktop-layout/: .gitignore  Cargo.toml  README.md
desktop-layout/py_get_layout/: README.md  pyproject.toml
desktop-layout/py_get_layout/src/: get_icon_layout.py
desktop-layout/py_get_layout/src/py_get_layout/: __init__.py  icon.py
desktop-layout/src/: bad_exp.rs  handler.rs  layout.rs  layout2.rs  lib.rs  utils.rs
fastlink-cli/: Cargo.toml  README.md
fastlink-cli/src/: main.rs  main_slim.rs
fastlink-cli/src/types/: args.rs  args_example_text.rs  link_task_and_args.rs  mod.rs
fastlink-cli/src/utils/: func.rs
fastlink-core/: Cargo.toml  README.md
fastlink-core/src/: lib.rs
fastlink-core/src/types/: err.rs  link_task.rs  link_task_args.rs  link_task_pre.rs  mod.rs
fastlink-core/src/utils/: fs.rs  func.rs  link.rs  logs.rs  mod.rs  path.rs
src/: err.rs  lib.rs  main.rs
src/desktop_setter/: mod.rs
src/desktop_setter/handler/: init.rs  mod.rs  origin.rs  original.rs  reset.rs  set.rs  state.rs  usual.rs
src/desktop_setter/types/: args.rs  commands.rs  mod.rs  state.rs
src/desktop_setter/utils/: func.rs  mod.rs  rollback.rs
src/types/: args.rs  args_example_text.rs  err.rs  link_task.rs  link_task_args.rs  link_task_pre.rs  mod.rs
src/utils/: func.rs  link.rs  logs.rs  mod.rs  path.rs
