[package]
name = "fastlink"
version = "0.11.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
dirs = { version = "6.0.0", optional = true }
dunce = "1.0.5"
env_logger = { version = "0.11.8" }
lazy_static = "1.5.0"
log = "0.4.27"
once_cell = { version = "1.21.3", optional = true }
path-clean = "1.0.1"
regex = { version = "1.11.1", optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
strip-ansi-escapes = { version = "0.2.1", optional = true }
walkdir = { version = "2.5.0", optional = true }
winreg = { version = "0.55.0", optional = true }

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[[bin]]
name = "fastlink"
path = "src/bin/fastlink.rs"
required-features = ["fastlink_full"]

[[bin]]
name = "fastlink-slim"
path = "src/bin/fastlink.rs"
required-features = ["fastlink_slim"]

[[bin]]
name = "desks"
path = "src/bin/desktop_setter.rs"
required-features = ["desktop_setter"]

[features]
# default = ["fastlink_slim"]
default = ["fastlink_full"]
# default = ["desktop_setter"]

# 正则表达式支持
regex = ["dep:regex", "walkdir"]
save_log = ["strip-ansi-escapes"]

# 完整版，包含所有功能
fastlink_full = ["regex", "save_log"]
# slim版
fastlink_slim = []
# 其他bin
desktop_setter = ["winreg", "serde", "serde_json", "dirs", "once_cell"]
