[workspace]
resolver = "2"
members = [
    "fastlink-core",
    "fastlink-cli",
    "desks-core",
    "desks-cli",
    "desks-tray",
    "desktop-layout",
]

[profile.release]
opt-level = 3
strip = "symbols"
codegen-units = 1
debug = "none"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false