[package]
name = "desks"
version = "0.2.0"
edition = "2021"
authors = ["srsnng"]
license = "Apache-2.0"

[dependencies]
fastlink-core = { path = "../fastlink-core", features = []}
log = "0.4.27"
clap = { version = "4.5.40", features = ["derive"] }
dirs = { version = "6.0.0" }
lazy_static = "1.5.0"
once_cell = { version = "1.21.3" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
winreg = { version = "0.55.0" }

[dependencies.windows]
version = "0.52.0"
features = ["Win32_UI_Shell", "Win32_Foundation"]

[[bin]]
name = "desks"
path = "src/main.rs"

[[bin]]
name = "desku"
path = "src/desku.rs"
required-features = ["only-usual"]

[features]
default = []
# default = ["only-usual"]

only-usual = []