[project]
name = "desktop-layout"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "srsng", email = "srsnng@hotmail.com" }
]
dependencies = [
    "pywin32==310",
    "nuitka>=2.7.10",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_get_layout"]
